<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="3"
    android:rowCount="5"
    >
    <Button
        android:id="@+id/button1"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_gravity="left"
        android:text="@string/button1"
        android:textAllCaps="false"
        />
    <Button
        android:id="@+id/button2"
        android:layout_column="1"
        android:layout_row="1"
        android:layout_gravity="fill_horizontal"
        android:layout_columnSpan="2"
        android:text="@string/button2"
        android:textAllCaps="false"
        />
    <Button
        android:id="@+id/button3"
        android:layout_column="0"
        android:layout_row="2"
        android:layout_gravity="fill_vertical"
        android:layout_rowSpan="3"
        android:text="@string/button3"
        android:textAllCaps="false"
        />
    <Button
        android:layout_gravity="fill"
        android:layout_column="0"
        android:layout_row="1"
        android:text="space"
        android:textAllCaps="false"
        />
</GridLayout>
