<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textview1"
        android:text="@string/tv1"
        android:textSize="20sp"
        android:autoLink="web"
        android:singleLine="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/textview1"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:textColor="#0000FF"
        android:textStyle="italic"
        android:text="@string/tv2"
        android:id="@+id/textview2"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/textview2"
        android:id="@+id/textview3"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:singleLine="true"
        android:ellipsize="end"
        android:text="@string/tv3"
        />

</RelativeLayout>
